--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,11 +1,14 @@
 
+.App {
+    background-color: #011a30;
+}
+
 /*Header
 ================================================== */
 body {
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
-
 }
 :root {
     --theme-color1: #fff;
