Changed Styling Properties

--- a/frontend/src/components/PackageGeneration/Editor.scss
+++ b/frontend/src/components/PackageGeneration/Editor.scss
@@ -7,7 +7,7 @@
         padding: 20px;
         width: 50%;
         border-radius: 5px;
-        color: white;
+        color: black;
         background-color: white;
         text-align: center;
         font-family: "Fira code", "Fira Mono", monospace;
